--- a/1.css
+++ b/1.css
@@ -1,32 +1,49 @@
-body {
-    background-color: #121212;
-    color: #e0e0e0;
-}
-.container {
-    margin-top: 30px;
-}
-pre, code {
-    background-color: #1e1e1e;
-    color: #e0e0e0;
-    padding: 10px;
-    border-radius: 5px;
-}
-.section-title {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-iframe {
-    width: 100%;
-    height: 400px;
-    background-color: white;
-    border: none;
-    margin-top: 20px;
-}
-.card-body {
-    background-color: #1e1e1e;
-    color: #e0e0e0;
-}
-.search-bar {
-    margin-bottom: 20px;
-}
+     body {
+        background-color: #121212;
+        color: #e0e0e0;
+    }
+
+    .container {
+        margin-top: 30px;
+    }
+
+    pre, code {
+        background-color: #1e1e1e;
+        color: #e0e0e0;
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+    .section-title {
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+
+    iframe {
+        width: 100%;
+        height: 400px;
+        background-color: white;
+        border: none;
+        margin-top: 20px;
+    }
+
+    .card-body {
+        background-color: #1e1e1e;
+        color: #e0e0e0;
+    }
+
+    .search-bar {
+        margin-bottom: 20px;
+    }
+
+    /* Estilo de la marca de agua */
+    .ajg {
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-30%);
+        font-size: 20px;
+        color: rgba(255, 255, 255, 0.1); /* Color blanco con opacidad */
+        z-index: -1;
+    }
