--- a/1.css
+++ b/1.css
@@ -20,13 +20,20 @@
         font-weight: bold;
     }
 
-    iframe {
-        width: 100%;
-        height: 400px;
-        background-color: white;
-        border: none;
-        margin-top: 20px;
+    footer {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3);
     }
+    
+.gtfobins-section iframe {
+    width: 100%;
+    border: none;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    margin-top: 10px;
+}
+
 
     .card-body {
         background-color: #1e1e1e;
